Customizing about me page layout

--- a/about.html
+++ b/about.html
@@ -45,7 +45,60 @@
                     </div>
                 </nav>
             </header>
-            <main class="container about-me lora text-center">
+            <main class="container lora about-me">
+                <div class="sidebar">
+                    <div class="card">
+                        <img src="your-photo.jpg" alt="Profile Photo">
+                        <h2>Hasibul Islam</h2>
+                        <p>Believer | Programmer | Not Technology Religious | Embedded system, Cyber Security, ML & AI enthusiast</p>
+                    </div>
+                </div>
+
+                <!-- RIGHT SCROLLABLE SECTION -->
+                <div class="content">
+
+                    <div class="section">
+                        <h2>About Me</h2>
+                        <p>
+                            Write about yourself here… your background, skills, goals, passions, etc.
+                        </p>
+                    </div>
+
+                    <div class="section">
+                        <h2>Education</h2>
+                        <p>
+                            Add your education timeline here.
+                        </p>
+                    </div>
+
+                    <div class="section">
+                        <h2>Experience</h2>
+                        <p>
+                            Add job roles, projects, responsibilities, etc.
+                        </p>
+                    </div>
+
+                    <div class="section">
+                        <h2>Other Information</h2>
+                        <p>
+                            Add anything else here…
+                        </p>
+                    </div>
+
+                </div>
+            </main>
+        </div>
+
+        <footer class="footer serif">
+            <p class="text-center">Copyright &copy; Hasibul's Diary, All rights reserved.</p>
+        </footer>
+
+        <script type="text/javascript" src="./js/app.js"></script>
+    </body>
+</html>
+
+<!-- 
+    Archive content
                 <h1>I think, you got my name already! Do you?
                     <img src = "https://github.com/0xAbdulKhalid/0xAbdulKhalid/raw/main/assets/mdImages/about_me.gif" width = 30px>
                 </h1>
@@ -69,27 +122,4 @@
                         <h2 class="quote">"Believer, passionate about programming, loves to write and debug code."</h2>
                     </blockquote>
                     
-                </div>
-            </main>
-        </div>
-
-        <footer class="footer serif">
-            <div class="quotes">
-                <blockquote>
-                    <h2 class="quote lora">"Don't judge a book by it's cover, but we love to do that!" &#128578;</h2>
-                </blockquote>
-            </div>
-            <p class="text-center">Copyright &copy; Hasibul's Diary , All rights reserved.</p>
-        </footer>
-
-        <script type="text/javascript" src="./js/app.js"></script>
-        <script type="text/javascript">
-            let arrow = document.querySelector(".arrow");
-            let info = document.querySelector(".basic-info");
-
-            arrow.addEventListener('click', () => {
-                info.classList.toggle('show');
-            })
-        </script>
-    </body>
-</html>
+                </div> -->
