About page: adding education section

--- a/about.html
+++ b/about.html
@@ -65,10 +65,15 @@
                     </div>
 
                     <div class="section">
-                        <h2>Education</h2>
-                        <p>
-                            Add your education timeline here.
-                        </p>
+                        <h2 class="text-underline">Education</h2>
+                        <b class="small bold">B.Sc (engg.) in Electronics and Communication engineering</b>
+                        <p>Hajee Mohammad Danesh Science and Technology University</p>
+                        <div class="line-gap"></div>
+                        <p><b>cgpa: 3.54 out of 4.00</b></p>
+                        <b>Relevant Coursework: </b>
+                        <span>
+                            Computer Networking, Data Structure and Algorithm, Operating System, Digital Signal processing
+                        </span>
                     </div>
 
                     <div class="section">
