Big update: changing layout and visuals

--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@
                 <div class="content">
 
                     <div class="section">
-                        <h2>About Me</h2>
+                        <!-- <h2>About Me</h2> -->
                         <p>
-                            Write about yourself here… your background, skills, goals, passions, etc.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, alias dolore molestias incidunt vero iure veniam officia delectus sit minus quos. Dignissimos, expedita? Nihil vero quod quia pariatur, quo quos.
                         </p>
                     </div>
 
@@ -79,14 +79,14 @@
                     <div class="section">
                         <h2>Experience</h2>
                         <p>
-                            Add job roles, projects, responsibilities, etc.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum harum eligendi, repudiandae aliquam rem quos reprehenderit voluptate, recusandae necessitatibus ratione cupiditate? Dicta fugiat laudantium odit consectetur similique veniam soluta accusamus?
                         </p>
                     </div>
 
                     <div class="section">
                         <h2>Other Information</h2>
                         <p>
-                            Add anything else here…
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio explicabo cupiditate ipsam ipsum error delectus recusandae perferendis nemo praesentium blanditiis fugit voluptate nobis, autem quisquam, eligendi accusamus fuga voluptatibus asperiores!
                         </p>
                     </div>
 
