--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="block-1">
                         <h1 class="lora large">Welcome at my Diary</h1>
                         <p class="lora small">
-                            The best way to know about someone is to read his/her Diary!
+                            The best way to know about someone is to read their Diary!<br>
                             Don't worry I will not bore you too much!
                         </p>
                         <p class="lora small">Here I will try to share my thoughts and learnings in Bangla.</p>
@@ -68,22 +68,31 @@
             <section class="container blog-section center">
                 <h2 class="lora large">Blog's</h2>
                 <div class="categories">
-                    <a href="./blogs/before-start/">
-                        <div class="category-card">
-                            <h1 class="san-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
-                            <p class="san-bangla small">প্রোগ্রামিং এর জগতে পা দেয়ার আগে আমাদের সবারই উচিত কিছু বিষয়ে জেনে নেয়া</p>
-                        </div>
-                    </a>
                     <a href="./blogs/math/">
                         <div class="category-card">
-                            <h1 class="san-bangla medium">গণিতের জগতে</h1>
-                            <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেড়েছে সে তার মোহে পড়েছে!!</p>
+                            <div class="card-inside pt-1 pb-1">
+                                <img class="card-inside-img" src="./img/icon/math.png" alt="Math World">
+                                <h1 class="serif-bangla medium">গণিতের জগতে</h1>
+                            </div>
+                            <p class="serif-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেড়েছে সে তার মোহে পড়েছে!!</p>
+                        </div>
+                    </a>
+                    <a href="./blogs/before-start/">
+                        <div class="category-card">
+                            <div class="card-inside">
+                                <img class="card-inside-img" src="./img/icon/before-starting-programming.png" alt="Before starting programming">
+                                <h1 class="serif-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
+                            </div>
+                            <p class="serif-bangla small">প্রোগ্রামিং এর জগতে পা দেয়ার আগে আমাদের সবারই উচিত কিছু বিষয়ে জেনে নেয়া</p>
                         </div>
                     </a>
                     <a href="">
                         <div class="category-card">
-                            <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
-                            <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
+                            <div class="card-inside pt-1 pb-1">
+                                <img class="card-inside-img" src="./img/icon/python.png" alt="Python programming">
+                                <h1 class="serif-bangla medium">পাইথন প্রোগ্রামিং</h1>
+                            </div>
+                            <p class="serif-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
                         </div>
                     </a>
                 </div>
