Adding content to about me page

--- a/about.html
+++ b/about.html
@@ -58,15 +58,18 @@
                 <div class="content">
 
                     <div class="section">
-                        <!-- <h2>About Me</h2> -->
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, alias dolore molestias incidunt vero iure veniam officia delectus sit minus quos. Dignissimos, expedita? Nihil vero quod quia pariatur, quo quos.
+                            I am <b>Hasibul Islam</b>, an R&D Engineer at <a class="text-blue" href="https://bdcom.cn/">BDCOM</a> and a passionate researcher in Artificial Intelligence, Cybersecurity, and IoT systems. I have completed my B.Sc. in Electronics and Communication Engineering from Hajee Mohammad Danesh Science and Technology University (<a class="text-blue" href="https://hstu.ac.bd/">HSTU</a>)
+                            <br> <div class="line-gap"></div>
+                            I am particularly interested in developing AI-driven adaptive authentication models, intelligent anomaly and intrusion detection systems, and lightweight, explainable security algorithms suitable for constrained IoT devices.
+                            <br> <div class="line-gap"></div>
+                            My long-term goal is to pursue a Master by Research, followed by a PhD, focusing on building next-generation AI-based security frameworks that are scalable, autonomous, and deployable in real-world systems. I am passionate about bridging the gap between academic research and practical industry solutions, with a vision to contribute meaningful innovations to the global cybersecurity landscape. Outside of work, I constantly explore new technologies, develop system-level tools, and engage in self-driven research in embedded systems, firmware development, network security and machine learning.
                         </p>
                     </div>
 
                     <div class="section">
                         <h2 class="text-underline">Education</h2>
-                        <b class="small bold">B.Sc (engg.) in Electronics and Communication engineering</b>
+                        <b class="small bold">B.Sc (engg.) in Electronics and Communication engineering</b>  <span>(Jan, 2018 - Nov, 2023)</span>
                         <p>Hajee Mohammad Danesh Science and Technology University</p>
                         <div class="line-gap"></div>
                         <p><b>cgpa: 3.54 out of 4.00</b></p>
@@ -77,10 +80,19 @@
                     </div>
 
                     <div class="section">
-                        <h2>Experience</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum harum eligendi, repudiandae aliquam rem quos reprehenderit voluptate, recusandae necessitatibus ratione cupiditate? Dicta fugiat laudantium odit consectetur similique veniam soluta accusamus?
-                        </p>
+                        <h2 class="text-underline">Experience</h2>
+                        <b class="small bold">R&D Engineer</b>  <span>(Nov, 2023 - Present)</span>
+                        <p><a class="text-blue" href="https://bdcom.cn/">BDCOM</a></p>
+                        <div class="line-gap"></div>
+                        <b>Responsibilities: </b>
+                        <ul class="general-list">
+                            <li>Maintaining core network security modules including IEEE 802.1X, Portal Authentication, DHCP-Snooping and also BackUpLink for embedded Linux and VxWorks-based switches.</li>
+                            <li>Implemented IEEE 802.1X supplicant functionality to BDCOM switches, improving authentication and access control.</li>
+                            <li>Designed and Developed a complete Portal Authentication (Captive Portal) module, enabling secure web-based user verification.</li>
+                            <li>Performed in-depth debugging and mitigation of protocol-layer vulnerabilities, improving overall system robustness and threat resilience in switching firmware.</li>
+                            <li>Resolved multiple protocol-level bugs to improve system stability and security compliance.</li>
+                            <li>Collaborate with HAL and QA teams to ensure secure integration and compliance with industry network security standards.</li>
+                        </ul>
                     </div>
 
                     <div class="section">
