About page: changed sub-title

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                     <div class="card">
                         <img src="your-photo.jpg" alt="Profile Photo">
                         <h2>Hasibul Islam</h2>
-                        <p>Believer | Programmer | Not Technology Religious | Embedded system, Cyber Security, ML & AI enthusiast</p>
+                        <p>Learner | R&D Engineer | ECE graduate | Embedded system, Cyber Security & AI/ML enthusiast</p>
                     </div>
                 </div>
 
