--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                     </div>
 
                     <div class="section">
-                        <h2>Publications</h2>
+                        <h2 class="text-underline">Publications</h2>
                         <ul class="publication-list">
                             <li><b>Hasibul Islam</b>, A. Kumar Mandal, M. S. Hossain, D. Haque, H. Saha, and T. Esha, “Development and Implementation of an IoT-enabled Real-time Cold Storage Monitoring and Notification System,” Proceedings of the 2024 International Conference on Advances in Computing, Communication, Electrical, and Smart Systems (iCACCESS), Dhaka, Bangladesh, 2024, pp. 1–6. <a class="text-blue" href="https://doi.org/10.1109/iCACCESS61735.2024.10499536">DOI: 10.1109/iCACCESS61735.2024.10499536</a></li>
                             <li><b>Hasibul Islam</b>, Md Shahzamal, D. Haque, “Early Detection of System Failure Using Machine Learning Techniques.“ Accepted for Publication in a Taylor and Francis Book of BIM 2023 (Not live yet). <a class="text-blue" href="https://www.researchgate.net/publication/396284585_Early_Detection_of_System_Failure_Using_Machine_Learning_Techniques">Read Here</a></li>
