Changing the about page overflow issue

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                         <p><a class="text-blue" href="https://bdcom.cn/">BDCOM</a></p>
                         <div class="line-gap"></div>
                         <b>Responsibilities: </b>
-                        <ul class="general-list">
+                        <ul class="publication-list">
                             <li>Maintaining core network security modules including IEEE 802.1X, Portal Authentication, DHCP-Snooping and also BackUpLink for embedded Linux and VxWorks-based switches.</li>
                             <li>Implemented IEEE 802.1X supplicant functionality to BDCOM switches, improving authentication and access control.</li>
                             <li>Designed and Developed a complete Portal Authentication (Captive Portal) module, enabling secure web-based user verification.</li>
